--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -1,1 +1,16 @@
 \section{Experimental Setup}
+
+\subsection{Experimental Setup}
+
+\begin{table*}[t!]
+  \scriptsize %
+  \centering %
+  % \rowcolors{2}{white}{gray!25}
+  \input{build/tab/platforms}
+  \caption{%
+    OpenCL testbeds, the time spent in automated testing, and the number of bug reports submitted to date.%
+  }
+  \label{tab:platforms}
+\end{table*}
+
+We conducted testing of 10 OpenCL testbeds, summarized in Table~\ref{tab:platforms}. Each testbed consists of a \emph{<device, driver>} pair. We covered a broadest range of hardware: 3 GPUs, 4 CPUs, a co-processor, and an emulator. 7 of the compilers tested are commercial products, 3 of them are open source. Our suite of testbeds includes both combinations of different drivers for the same device, and different devices using the same driver.
