--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -1,4 +1,4 @@
-\section{Experimental Setup}
+\section{Experimental Methodology}
 
 \subsection{Experimental Setup}
 
@@ -14,3 +14,7 @@
 \end{table*}
 
 We conducted testing of 10 OpenCL testbeds, summarized in Table~\ref{tab:platforms}. Each testbed consists of a \emph{<device, driver>} pair. We covered a broadest range of hardware: 3 GPUs, 4 CPUs, a co-processor, and an emulator. 7 of the compilers tested are commercial products, 3 of them are open source. Our suite of testbeds includes both combinations of different drivers for the same device, and different devices using the same driver.
+
+\subsection{Methodology}
+
+TODO
