--- a/sec/overview.tex
+++ b/sec/overview.tex
@@ -2,7 +2,7 @@
 
 \cc{DELETE ME, merge into other sections}
 
-\paragraph{Test case generation} We mine over a million lines of handwritten OpenCL code from GitHub, which we use to construct a corpus of representative programs. We learn a generative model over this corpus, using syntactic level language modeling. DeepSmith, our deep learning program generator, automatically and rapidly synthesizes an unbounded number of programs for fuzz testing compilers.
+\paragraph{Test case generation} 
 
 
-\paragraph{Bugs found} All compilers yielded bugs. Every compiler crashed, and every compiler yielded anomalous results --- either programs which crash, or programs which silently compute the wrong result. To date, we have submitted XX bug reports to compiler vendors. Of those, 41\% are compiler crashes, XX\% are compiler hangs, and the remainder are cases where the generated program either silently emits wrong-code, or crashes at runtime. \cc{We also test the Clang frontend of every LLVM release in the past 24 months\ldots}
+\paragraph{Bugs found} 
