--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -546,7 +546,7 @@ The hardest false-positive to prevent was division by zero and related mathemati
 
 \begin{figure}
   \centering %
-  \subfloat[The invalid write \cc{IS IT invalid?} in line 3 does not affect execution of lines 2 and 4 for all testbeds except $7\pm$. On Testbeds $7\pm$, lines 2 and 4 execute when the invalid write has an index < $44032$, and not  when index $\ge 44032$.]{%
+  \subfloat[The out-of-range write on line 3 is invalid, but does not affect execution of lines 2 and 4 for all testbeds except $7\pm$. On Testbeds $7\pm$, lines 2 and 4 execute when the invalid write has an index $1 \le i < 44032$, and not  when index $i \ge 44032$ or $i < 0$.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\XeonPhiInvalidWrite}}}%
     \label{lst:xeon-phi-invalid-write}
   }\\%
@@ -693,9 +693,9 @@ DeepSmith also triggered \emph{unreachable!} compiler errors in 180 distinct tes
 
 \begin{figure}
 	\centering %
-	\includegraphics[width=\columnwidth]{build/img/kernel-sizes}%
+	\includegraphics[width=.9\columnwidth]{build/img/kernel-sizes}%
 	\caption{%
-		Kernel sizes, grouped by outcome. DeepSmith kernels are on average two orders of magnitude smaller than CLSmith.%
+		Kernel sizes, grouped by outcome. DeepSmith kernels are on average two orders of magnitude smaller than CLSmith. \cc{TODO: group by classification}%
 	}%
 	\label{fig:kernel-sizes} %
 \end{figure}
@@ -707,7 +707,7 @@ Table~\ref{tab:classifications} shows the results of applying voting heuristics 
 
 \begin{figure}
 	\centering %
-	\includegraphics[width=\columnwidth]{build/img/runtimes}%
+	\includegraphics[width=.9\columnwidth]{build/img/runtimes}%
 	\caption{%
 		Runtimes, excluding timeouts. On average, DeepSmith test cases are evaluated $3.03\times$ faster than CLSmith ($2.45\times$, and $4.46\times$ for generation and execution, respectively).%
 %    Total speedup is 3.03x
