--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -720,11 +720,14 @@ Table~\ref{tab:classifications} shows the results of applying voting heuristics 
 
 
 \begin{table*}
-	\scriptsize %
-	\centering %
-	\input{build/tab/megatable}
-	\caption{Using voting heuristics to expose anomalous results from 48 hours of testing using CLSmith and DeepSmith. Columns denote anomalous-output (ao), anomalous build failure (\textbf{abf}), anomalous runtime crash (\textbf{ac}), and anomalous timeout (\textbf{ato}) classifications for CLSmith and DeepSmith, respectively. \cc{TODO: Add a distinct crashes column? Bring back the size\_t and int; failures} \cc{TODO merge Table 3 and Table 2}}
-	\label{tab:classifications}
+  \scriptsize %
+  \centering %
+  \input{build/tab/megatable}
+  \caption{%
+    Results from 48 hours of testing using CLSmith and DeepSmith. Testbed \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) outcomes for CLSmith and DeepSmith, respectively.%
+    
+    Using voting heuristics to expose anomalous results from 48 hours of testing using CLSmith and DeepSmith. Columns denote anomalous-output (ao), anomalous build failure (\textbf{abf}), anomalous runtime crash (\textbf{ac}), and anomalous timeout (\textbf{ato}) classifications for CLSmith and DeepSmith, respectively. \cc{TODO: Add a distinct crashes column? Bring back the size\_t and int; failures} \cc{TODO merge Table 3 and Table 2}}
+  \label{tab:classifications}
 \end{table*}
 
 The 2357 \textbf{abf} results for CLSmith on Testbeds $4\pm$ and $6\pm$ are all a result of compilers rejecting empty declarations, (e.g. \texttt{int;}) which CLSmith occasionally emits. This is a known CLSmith issue which will likely be addressed.
