--- a/sec/methodology.tex
+++ b/sec/methodology.tex
@@ -17,4 +17,4 @@ We conducted testing of 10 OpenCL testbeds, summarized in Table~\ref{tab:platfor
 
 \subsection{Methodology}
 
-TODO
+We run each generated test case twice, once with a single thread, and one with 2048 threads. We also run with and without compiler optimizations.
