--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -392,7 +392,7 @@ We found numerous cases where kernels trigger a crash in the compiler (and as a 
       \noindent\mbox{\parbox{\columnwidth}{\usebox{\IntelGtDoubleAssertion}}}%
       \label{lst:intel-gt2-double-assertion}
     }\\%
-  \subfloat[Of the 10 compilers we tested, 6 crash with segfault when compiling this malformed kernel.]{%
+  \subfloat[Of the 10 compilers we tested, 6 crash with segfault when compiling this kernel.]{%
     \noindent\mbox{\parbox{\columnwidth}{\usebox{\AlmostEverythingCrash}}}%
     \label{lst:almost-everything-crash}
   }\\%
@@ -580,14 +580,24 @@ We ran each program generator using its default configuration for 48 hours on ea
 \begin{table*}
   \scriptsize %
   \centering %
-  \input{build/tab/outcomes}
+  \input{build/tab/megatable}
   \caption{%
-    Results from 48 hours of testing using CLSmith and DeepSmith. Testbed \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) outcomes for CLSmith and DeepSmith, respectively.%
+    Results from 48 hours of testing using CLSmith and DeepSmith. Testbed \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote the number of build crash (\textbf{bc}), build timeout (\textbf{bto}), build failure (\textbf{bf}), runtime crash (\textbf{c}), timeout (\textbf{to}), and pass (\textbf{\cmark}) results.%
   }
-  \label{tab:outcomes}
+  \label{tab:megatable}
 \end{table*}
 
-Table~\ref{tab:outcomes} shows the outcomes of 48 hours of consecutive testing for each of the platforms from Table~\ref{tab:platforms}.
+%\begin{table*}
+%  \scriptsize %
+%  \centering %
+%  \input{build/tab/outcomes}
+%  \caption{%
+%    Results from 48 hours of testing using CLSmith and DeepSmith. Testbed \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) outcomes for CLSmith and DeepSmith, respectively.%
+%  }
+%  \label{tab:outcomes}
+%\end{table*}
+
+Table~\ref{tab:megatable} shows the results of 48 hours of consecutive testing for each of the platforms from Table~\ref{tab:platforms}.
 
 An average of XX CLSmith and XX DeepSmith test cases were evaluated on each device, with an average time per test case of XX and XX respectively. The XX-fold increase in testing throughput achieved by DeepSmith is a result of XXX. Figure~\ref{fig:runtimes} shows the times taken to generate and execute test cases. DeepSmith generation time is proportional to program length. For Clsmith, generation time depends on the number of rejections which are required before production of statically verified code is correct \cc{ldots}.
 
@@ -692,12 +702,12 @@ DeepSmith also triggered \emph{unreachable!} compiler errors in 180 distinct tes
 
 
 \begin{figure}
-	\centering %
-	\includegraphics[width=.9\columnwidth]{build/img/kernel-sizes}%
-	\caption{%
-		Kernel sizes, grouped by outcome. DeepSmith kernels are on average two orders of magnitude smaller than CLSmith. \cc{TODO: group by classification}%
-	}%
-	\label{fig:kernel-sizes} %
+  \centering %
+  \includegraphics[width=.9\columnwidth]{build/img/kernel-sizes}%
+  \caption{%
+    Kernel sizes, grouped by outcome. DeepSmith kernels are on average two orders of magnitude smaller than CLSmith. \cc{TODO: group by classification}%
+  }%
+  \label{fig:kernel-sizes} %
 \end{figure}
 
 
@@ -706,29 +716,17 @@ DeepSmith also triggered \emph{unreachable!} compiler errors in 180 distinct tes
 Table~\ref{tab:classifications} shows the results of applying voting heuristics to the results of Table~\ref{tab:outcomes}.
 
 \begin{figure}
-	\centering %
-	\includegraphics[width=.9\columnwidth]{build/img/runtimes}%
-	\caption{%
-		Runtimes, excluding timeouts. On average, DeepSmith test cases are evaluated $3.03\times$ faster than CLSmith ($2.45\times$, and $4.46\times$ for generation and execution, respectively).%
+  \centering %
+  \includegraphics[width=.9\columnwidth]{build/img/runtimes}%
+  \caption{%
+    Runtimes, excluding timeouts. On average, DeepSmith test cases are evaluated $3.03\times$ faster than CLSmith ($2.45\times$, and $4.46\times$ for generation and execution, respectively).%
 %    Total speedup is 3.03x
 %    CLgen generation is 2.45x faster than CLSmith
 %    CLgen execution is 4.46x faster than CLSmith
 %    CLgen reduction is 66.54x faster than CLSmith
-	}%
-	\label{fig:runtimes} %
+  }%
+  \label{fig:runtimes} %
 \end{figure}
-
-
-\begin{table*}
-  \scriptsize %
-  \centering %
-  \input{build/tab/megatable}
-  \caption{%
-    Results from 48 hours of testing using CLSmith and DeepSmith. Testbed \#. as per Table~\ref{tab:platforms}. $\pm$ denotes optimizations off ($-$) vs on ($+$). The remaining columns denote build failure (\textbf{bf}), build crash (\textbf{bc}), build timeout (\textbf{bto}), runtime crash (\textbf{c}), timeout (\textbf{to}), and passed (\textbf{\cmark}) outcomes for CLSmith and DeepSmith, respectively.%
-    %
-    Using voting heuristics to expose anomalous results from 48 hours of testing using CLSmith and DeepSmith. Columns denote anomalous-output (ao), anomalous build failure (\textbf{abf}), anomalous runtime crash (\textbf{ac}), and anomalous timeout (\textbf{ato}) classifications for CLSmith and DeepSmith, respectively. \cc{TODO: Add a distinct crashes column? Bring back the size\_t and int; failures} \cc{TODO merge Table 3 and Table 2}}
-  \label{tab:classifications}
-\end{table*}
 
 The 2357 \textbf{abf} results for CLSmith on Testbeds $4\pm$ and $6\pm$ are all a result of compilers rejecting empty declarations, (e.g. \texttt{int;}) which CLSmith occasionally emits. This is a known CLSmith issue which will likely be addressed.
 % https://github.com/ChrisLidbury/CLSmith/issues/7
