--- a/sec/eval.tex
+++ b/sec/eval.tex
@@ -469,7 +469,7 @@ TODO: Using the clang frontend (debug + assert build), compile 75,000 DeepSmith 
   \centering %
   \includegraphics[width=.95\columnwidth]{build/img/clang-crashes}%
   \caption{%
-    Crash rate of every LLVM release in the past 24 months using Clang front-end.% 2 years of development has lead to a tenfold decrease in crash rate.
+    Crash rate of every LLVM release in the past 24 months compiling 75k DeepSmith kernels using Clang front-end.% 2 years of development has lead to a tenfold decrease in crash rate.
   }%
   \label{fig:clangs} %
 \end{figure}
