Update on Overleaf.

--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -6,14 +6,18 @@
 %\hl{Hugh comment}
 
 \noindent
-Compilers are a fundamental trusted technology. Bugs in them are particularly harmful. They can introduce extremely hard to identify errors in the generated binary. If we detect them early, this just increases development costs. If not, this can cause runtime failures in even carefully tested software. Identifying such bugs before compiler release is of critical importance but it is not a straightforward task. Modern optimizing compilers are large and complex programs with a practically infinite scope of possible inputs. Fixed test-suites are inadequate for ensuring correct behavior over such a range of inputs, and the lack of formal specifications for sections of compilers renders formal verification unusable beyond isolated subcomponents.
+Compilers are a fundamental trusted technology. Bugs in them are particularly harmful. They can introduce extremely hard to identify errors in the generated binary. If we detect them early, this just increases development costs. If not, this can cause runtime failures in even carefully tested software. Identifying such bugs before compiler release is of critical importance but is not a straightforward task. Modern optimizing compilers are large and complex programs with a practically infinite scope of possible inputs. Fixed test suites are inadequate for ensuring correct behavior over such a range of inputs.
 
-\cc{TODO: define fuzzing}
+Fuzz testing is a more appropriate approach. When fuzzing, randomly generated valid or semi-valid code is fed to the compiler. Any kind of unexpected behavior, including crashes, freezes, or wrong binaries, indicates a compiler bug. While crashes and freezes are easy to detect, telling correct from wrong output with absolute certainty is not possible in this scenario. The best we can do is Differential Testing~\cite{Chen2014a,Kossatchev2005,Chen2013}. The generated code and a set of inputs, the \emph{test case}, is compiled and executed on multiple \emph{testbeds}. If the test case output of differs between testbeds, then a potential bug has been discovered.
 
-% XSmith: It is difficult to create effective fuzzers for programming language compilers and interpreters because these systems have highly structured inputs, but it is important that such fuzzers exist. Programming language implementations are critical software infrastructure: defects in compilers and interpreters can potentially have great costs in terms of software correctness and reliability, human productivity, and computer security. This project seeks to reduce the time and human effort needed to create sophisticated fuzzers for programming language implementations. In so doing, this project is expected to advance the state of the art in random software testing, improve the quality of several programming language implementations selected for study, and produce new open-source software tools that programmers can use to develop new and more effective fuzz testers.
+Compiler fuzzing boils down to efficiently generating test cases that trigger compiler bugs. The state of the art approach, CSmith~\cite{Yang2011}, generates large random programs by defining and sampling a probabilistic grammar which covers a large subset of the C programming language. Through this grammar, CSmith ensures that the generated code easily passes the compiler front-end and stresses the most complex part of the compiler, the middle end. A complex static and dynamic analysis makes sure that programs are free from undefined behavior. The programs are then differentially tested.
 
-Differential Testing is an effective and widely studied methodology for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005,Chen2013}. %Figure~\ref{fig:difftest} shows the approach.
-A program and a set of inputs, henceforth referred to as a \emph{test case}, is compiled and executed on multiple \emph{testbeds}. If any of the compilers crash or loop indefinitely, or if the output of the programs differs between testbeds, then a potential bug has been discovered. \cc{TODO: Early work in context free grammar enumeration to text syntax analyzers~\cite{Purdom1972,Malloy2001}. These can't test past the compiler front-end. Early program generators~\cite{Zhao2009},\cite{Bryan2007}. Now, CSmith~\cite{Yang2011} and EMI testing~\cite{Le2013a} enable deeper, middle-end testing. The behavior of compilers under invalid inputs is --- to the best of our knowledge --- much less explored topic.}
+While CSmith has been successfully used to identify hundreds of bugs in compilers, it and similar approaches have a significant drawback. They represent a huge undertaking and require a thorough understanding of the target programming language. CSmith was developed over the course of years, and consists of over 40k lines of handwritten C++ code. By tightly coupling the generation logic with the target programming language, each feature of the grammar must be painstakingly and expertly engineered for each new target language. For example, lifting CSmith from C to OpenCL~\cite{Lidbury2015a} --- a superficially simple task --- took 9 months and 8k lines of code. Given the difficulty of defining a new grammar, typically only a subset of the language is implemented.
+\pp{up to here, will continue after lunch}
+
+
+%Differential Testing is an effective and widely studied methodology for identifying compiler bugs~\cite{Chen2014a,Kossatchev2005,Chen2013}. %Figure~\ref{fig:difftest} shows the approach.
+%A program and a set of inputs, henceforth referred to as a \emph{test case}, is compiled and executed on multiple \emph{testbeds}. If any of the compilers crash or loop indefinitely, or if the output of the programs differs between testbeds, then a potential bug has been discovered. \cc{TODO: Early work in context free grammar enumeration to text syntax analyzers~\cite{Purdom1972,Malloy2001}. These can't test past the compiler front-end. Early program generators~\cite{Zhao2009},\cite{Bryan2007}. Now, CSmith~\cite{Yang2011} and EMI testing~\cite{Le2013a} enable deeper, middle-end testing. The behavior of compilers under invalid inputs is --- to the best of our knowledge --- much less explored topic.}
 
 %\begin{figure}
 %  \centering
@@ -26,9 +30,9 @@ A program and a set of inputs, henceforth referred to as a \emph{test case}, is 
 %  \label{fig:difftest}
 %\end{figure}
 
-A probabilistic grammar is used to enumerate a large, random program, which is then compiled and executed across a number of compilers. In this manner, CSmith~\cite{Yang2011}, a random program generator for the C programming language, has been used to identify hundreds of bugs in compilers. CSmith defines a probabilistic grammar over a large subset of the C programming language, and recursively instantiates a program, using rigorous and conservative static and dynamic analysis to ensure that programs are free from undefined behavior.
+%A probabilistic grammar is used to enumerate a large, random program, which is then compiled and executed across a number of compilers. In this manner, CSmith~\cite{Yang2011}, a random program generator for the C programming language, has been used to identify hundreds of bugs in compilers. CSmith defines a probabilistic grammar over a large subset of the C programming language, and recursively instantiates a program, using rigorous and conservative static and dynamic analysis to ensure that programs are free from undefined behavior.
 
-\cc{where it starts to get interesting} Developing a random program generation is a huge undertaking, requiring a thorough understanding of the target programming language --- CSmith was developed over the course of years, and consists of over 40k lines of handwritten C++ code. By tightly coupling the generation logic with the target programming language, each feature of the grammar must be painstakingly and expertly engineered, and is accompanied by exponential costs in developing the static and dynamic safety checks to ensure that generated programs remain free from (or at least, are likely free from) undefined behavior. For example, lifting CSmith from C to OpenCL~\cite{Lidbury2015a} took 9 months and 8k lines of code. As such, typically only a subset of the language is implemented, and the expressiveness of the grammar is bounded by the limits of static and dynamic analysis. \cc{exhaustive testing is impossible - requiring enumeration of every sequence of characters, but grammar enumeration leaves too many bugs on the table.? }
+%CSmith has been successfully used to identify hundreds of bugs in compilers but it represents Developing a random program generation is a huge undertaking, requiring a thorough understanding of the target programming language --- CSmith was developed over the course of years, and consists of over 40k lines of handwritten C++ code. By tightly coupling the generation logic with the target programming language, each feature of the grammar must be painstakingly and expertly engineered, and is accompanied by exponential costs in developing the static and dynamic safety checks to ensure that generated programs remain free from (or at least, are likely free from) undefined behavior. For example, lifting CSmith from C to OpenCL~\cite{Lidbury2015a} took 9 months and 8k lines of code. As such, typically only a subset of the language is implemented, and the expressiveness of the grammar is bounded by the limits of static and dynamic analysis. \cc{exhaustive testing is impossible - requiring enumeration of every sequence of characters, but grammar enumeration leaves too many bugs on the table.? }
 % --- to date, important language features such as strings, dynamic memory allocation, function pointers, and recursion are unsupported.
 % , despite the large overlap between C and OpenCL (which is C with extensions). This huge development cost is extended to the reduction tools too, with CLReduce~\cite{Pflanzer2016} requiring extensions to OCLgrind.
 
