--- a/sec/intro.tex
+++ b/sec/intro.tex
@@ -37,7 +37,7 @@ While CSmith has been successfully used to identify hundreds of bugs in compiler
 
 \cc{What is needed\ldots}
 
-What we propose instead is a novel, automated approach to the generation of random programs for compiler fuzzing. Using a corpus of handwritten code in a particular programming language, we use deep neural networks to automatically construct probabilistic models for how humans write programs. The neural networks, without prior knowledge, infer both the syntax and semantics of the programming language and the common constructs and patterns. By framing the generation of random programs as a language modeling problem, we greatly simplify the process of program generation, and the expressiveness of generated programs is limited only by what is contained in the corpus. Such a corpus can readily be assembled from open source repositories.
+What we propose instead is a novel and low effort approach to the generation of random programs for compiler fuzzing. Using a corpus of handwritten code in a particular programming language, we use deep neural networks to automatically construct probabilistic models for how humans write programs. The neural networks, without prior knowledge, infer both the syntax and semantics of the programming language and the common constructs and patterns. By framing the generation of random programs as a language modeling problem, we greatly simplify the process of program generation, and the expressiveness of generated programs is limited only by what is contained in the corpus. Such a corpus can readily be assembled from open source repositories.
 
 \cc{TODO: syntactic modeling trade-off}
 
